Updating CSV by running: operator-sdk olm-catalog gen-csv --update-crds --csv-version 0.7.0 --from-version 0.6.0 ......... and manually re-adding some changed fields like: olm.targetNamespaces, provider and removing camel/kafka keywords (they are on their own operator)

--- a/deploy/olm-catalog/knative-eventing-operator/0.7.0/knative-eventing-operator.v0.7.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.7.0/knative-eventing-operator.v0.7.0.clusterserviceversion.yaml
@@ -146,9 +146,9 @@ spec:
         serviceAccountName: knative-eventing-operator
     strategy: deployment
   installModes:
-  - supported: true
+  - supported: false
     type: OwnNamespace
-  - supported: true
+  - supported: false
     type: SingleNamespace
   - supported: false
     type: MultiNamespace
@@ -157,6 +157,8 @@ spec:
   keywords:
   - serverless
   - eventing
+  - camel
+  - kafka
   links:
   - name: Website
     url: https://www.knative.dev/docs/eventing/
@@ -167,6 +169,6 @@ spec:
     name: Knative team
   maturity: alpha
   provider:
-    name: Red Hat
+    name: Knative Community
   replaces: knative-eventing-operator.v0.6.0
   version: 0.7.0
