fixing RBAC for finalizers sub-resource

--- a/deploy/resources/knative-eventing-v0.7.0.yaml
+++ b/deploy/resources/knative-eventing-v0.7.0.yaml
@@ -1676,6 +1676,12 @@ rules:
   - watch
   - update
 - apiGroups:
+  - messaging.knative.dev
+  resources:
+  - inmemorychannels/finalizers
+  verbs:
+  - update
+- apiGroups:
   - ""
   resources:
   - services
