--- a/deploy/resources/knative-eventing-v0.7.0.yaml
+++ b/deploy/resources/knative-eventing-v0.7.0.yaml
@@ -258,6 +258,12 @@ rules:
   - patch
   - watch
 - apiGroups:
+  - messaging.knative.dev
+  resources:
+  - sequences/finalizers
+  verbs:
+  - update
+- apiGroups:
   - sources.eventing.knative.dev
   resources:
   - cronjobsources
