--- a/deploy/olm-catalog/knative-eventing-operator/0.8.0/knative-eventing-operator.v0.8.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.8.0/knative-eventing-operator.v0.8.0.clusterserviceversion.yaml
@@ -166,6 +166,6 @@ spec:
     name: Knative team
   maturity: alpha
   provider:
-    name: Knative Community
+    name: Red Hat
   replaces: knative-eventing-operator.v0.7.1
   version: 0.8.0
