--- a/deploy/olm-catalog/knative-eventing-operator/0.9.0/knative-eventing-operator.v0.9.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.9.0/knative-eventing-operator.v0.9.0.clusterserviceversion.yaml
@@ -79,9 +79,6 @@ spec:
                 - knative-eventing-operator
                 env:
                 - name: WATCH_NAMESPACE
-                  valueFrom:
-                    fieldRef:
-                      fieldPath: metadata.annotations['olm.targetNamespaces']
                 - name: POD_NAME
                   valueFrom:
                     fieldRef:
@@ -89,6 +86,8 @@ spec:
                 - name: OPERATOR_NAME
                   value: knative-eventing-operator
                 image: quay.io/openshift-knative/knative-eventing-operator:v0.9.0
+                args:
+                  - --filename=https://raw.githubusercontent.com/openshift/knative-eventing/release-v0.9.0/openshift/release/knative-eventing-v0.9.0.yaml
                 imagePullPolicy: Always
                 name: knative-eventing-operator
                 resources: {}
