--- a/deploy/olm-catalog/knative-eventing-operator/0.10.0/knative-eventing-operator.v0.10.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.10.0/knative-eventing-operator.v0.10.0.clusterserviceversion.yaml
@@ -87,6 +87,8 @@ spec:
                 - name: OPERATOR_NAME
                   value: knative-eventing-operator
                 image: quay.io/openshift-knative/knative-eventing-operator:v0.10.0
+                args:
+                  - --filename=https://raw.githubusercontent.com/openshift/knative-eventing/release-v0.10.0/openshift/release/knative-eventing-v0.10.0.yaml
                 imagePullPolicy: Always
                 name: knative-eventing-operator
                 resources: {}
