Adding RBAC for SRVKE-242

--- a/deploy/olm-catalog/knative-eventing-operator/0.10.0/knative-eventing-operator.v0.10.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.10.0/knative-eventing-operator.v0.10.0.clusterserviceversion.yaml
@@ -143,6 +143,12 @@ spec:
           - '*'
           verbs:
           - '*'
+        - apiGroups:
+          - maistra.io
+          resources:
+          - servicemeshmemberrolls
+          verbs:
+          - '*'
         serviceAccountName: knative-eventing-operator
     strategy: deployment
   installModes:
