Adding RBAC for SRVKE-242

--- a/deploy/olm-catalog/knative-eventing-operator/0.9.0/knative-eventing-operator.v0.9.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.9.0/knative-eventing-operator.v0.9.0.clusterserviceversion.yaml
@@ -60,6 +60,12 @@ spec:
           - '*'
           verbs:
           - '*'
+        - apiGroups:
+          - maistra.io
+          resources:
+          - servicemeshmemberrolls
+          verbs:
+          - '*'
         serviceAccountName: knative-eventing-operator
       deployments:
       - name: knative-eventing-operator
