forward porting nw policy patch

--- a/deploy/resources/knative-eventing-v0.10.0.yaml
+++ b/deploy/resources/knative-eventing-v0.10.0.yaml
@@ -2612,5 +2612,17 @@ spec:
         - configMap:
             name: config-logging
           name: config-logging
-
 ---
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: eventing-webhook
+  namespace: knative-eventing
+  labels:
+    app: eventing-webhook
+spec:
+  podSelector:
+    matchLabels:
+      app: eventing-webhook
+  ingress:
+    - {}
