:fire: adding a basic namespace description to not break, just in case ... See SRVKS-378

--- a/deploy/resources/networkpolicies.yaml
+++ b/deploy/resources/networkpolicies.yaml
@@ -27,6 +27,11 @@ spec:
   - Ingress
   - Egress
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: knative-serving-ingress
+---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
