hide the KnativeEventings APIs
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/deploy/olm-catalog/knative-eventing-operator/0.12.0/knative-eventing-operator.v0.12.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/knative-eventing-operator/0.12.0/knative-eventing-operator.v0.12.0.clusterserviceversion.yaml
@@ -14,6 +14,7 @@ metadata:
       primitives to enable late-binding event sources and event
       consumers.
     repository: https://github.com/openshift-knative/knative-eventing-operator
+    operators.operatorframework.io/internal-objects: '["knativeeventings.eventing.knative.dev"]'
     support: Red Hat
   name: knative-eventing-operator.v0.12.0
   namespace: placeholder
